app/javascript/src/styles/common/navigation.scss
nav.navigation {
  display: grid;
  grid-template-areas: "logo logo controls";
  grid-template-columns: min-content auto;
  grid-template-rows: min-content min-content min-content min-content auto;

  width: 100%; // otherwise narrow when fixed
  z-index: 20; // otherwise post labels layered above


  /* Top bar, always visible */
  .nav-logo {
    grid-area: logo;

    background-color: themed("color-background");

    a.nav-logo-link {
      display: flex;

      // Height: 3.75rem
      // - padding  0.25 * 2 = 0.5
      // - image               3.25
      height: 3.25rem;
      width: 3.25rem;
      margin: 0.25rem;
  
      background-image: url("main-logo.svg");
      background-repeat: no-repeat;
      background-size: contain;
      background-position-y: center;
    }
  }

  .nav-controls {
    grid-area: controls;

    display: flex;
    flex-flow: row-reverse;
    align-items: center;
    gap: 0.5em;

    font-size: 1.15rem;
    padding-right: 0.5em;
    background-color: themed("color-background");

    //   Height: 3.75rem
    // - wrapper padding  0.875 * 2 = 1.75
    // - link padding     0.25  * 2 = 0.5
    // - font size                    1.5
    padding: 0.875rem;

    & > a {
      display: flex;
      gap: 0.25em;

      padding: 0.25rem 0.5rem;
      background: themed("color-foreground");
      border-radius: 6px;

      white-space: nowrap;

      & > i {
        font-size: 1.5rem;
        color: themed("color-link-active");
      }
    }
  }

  /* Prevent toggled menus from being too wide */
  .nav-offset-left {
    grid-area: offleft;
    display: none; // flex
    background: #00000050;
  }

  .nav-offset-bottom {
    grid-area: offbott;
    display: none; // flex
    background: #00000050;
  }

  /* Toggled menus, hidden by default */
  .nav-primary {
    grid-area: primary;
    display: none; // flex
    flex-flow: column;

    background-color: themed("color-section");
    font-size: 1.5em;

    li {
      padding: 0;
      a {
        display: block;
        border-bottom: 1px solid themed("color-foreground");
        padding: 0.5em;

        // "Comments" is usually the longest and might wrap
        white-space: nowrap;

        i {
          width: 1.5rem;
          color: themed("color-link-active");
          text-align: center;
        }
      }

      &.current a { background-color: themed("color-foreground"); }
      &.forum-updated {
        position: relative;

        &::after {
          content: "";
          width: 6px;
          height: 6px;
          border-radius: 3px;

          background: var(--palette-text-red);

          position: absolute;
          right: 0.2em;
          top: 1em;
        }
      }
    }
  }

  .nav-secondary {
    grid-area: secondary;
    display: none; // flex
    flex-flow: column;

    background-color: themed("color-foreground");
    font-size: 1.35em;
    height: 440px;

    // Prevent the tools / help buttons from being pushed
    // way too low on pages with a lot of secondary links
    overflow-y: scroll;

    li {
      padding: 0;
      a {
        display: block;
        border-bottom: 1px solid themed("color-section");
        padding: 0.5em;
      }

      &.divider {
        border-bottom: 1px solid themed("color-section");
        height: 0.25em;
      }

      form input[type="text"] {
        width: 100%;
        box-sizing: border-box;

        // Reduced font size to make the search
        // box less claustrophobic
        font-size: 1em;
        padding: 0.25em 0.5em;
      }
    }
  }

  .nav-tools {
    grid-area: tools;

    display: none; // grid
    grid-template-columns: 1fr 1fr;
    grid-template-rows: min-content;

    padding: 1rem;
    gap: 1rem;

    background-color: themed("color-section");
    border-top: 1px solid themed("color-foreground");

    li {
      padding: 0;

      &.nav-tools-login { grid-column: 1 / -1; }

      & > a {
        display: block;

        background: themed("color-section-lighten-5");
        border-radius: 6px;
  
        font-size: 125%;
        padding: 0.5rem 1rem;
        text-align: center;

        white-space: nowrap;
  
        i { color: themed("color-link-active"); }
      }
    }

    &.anonymous li.nav-tools-themes {
      grid-column: 1 / -1;
    }
  }

  .nav-help {
    grid-area: help;

    display: none; // grid
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: min-content;

    padding: 1rem;
    gap: 1rem;

    background: themed("color-section");

    li {
      padding: 0;

      &.nav-help-discord,
      &.nav-help-subscribestar {
        grid-column: 1 / -1;
      }

      & > a {
        display: flex;

        background: themed("color-section-darken-5");
        border-radius: 6px;
        
        font-size: 125%;
        padding: 0.5rem 1rem;

        justify-content: center;
        align-items: center;
        gap: 0.25em;

        img {
          height: 1.25em;
          margin: -0.5em 0;
        }
      }

      // Hack to put the wiki/help links before discord/sstar on mobile
      // but still have "more" at the end on desktop
      &#nav-more {
        grid-row: 1;
        grid-column: 3;
      }
    }
  }
}


// Sticky header
body[data-th-sheader="true"] nav.navigation {
  position: sticky;
  top: 0;
}


// Mobile toggle
html.nav-toggled {

  height: 100%;
  overflow: hidden;

  body { padding-top: 3.75rem; }

  nav.navigation {
    grid-template-areas:
      "logo    logo    controls" 
      "offleft primary secondary "
      "offleft tools   tools     "
      "offleft help    help      "
      "offbott offbott offbott   ";
    grid-template-columns: auto minmax(auto, 180px) minmax(auto, 180px);
    position: fixed;
    top: 0;
    height: 100vh;
    max-width: 100vw; // prevent bug when page overflows viewport

    // Allow scrolling when the menu is too long
    overflow-y: scroll;

    .nav-primary, .nav-secondary, .nav-offset-left, .nav-offset-bottom {
      display: flex;
    }
    .nav-tools, .nav-help {
      display: grid;
    }
    .nav-primary, .nav-tools, .nav-help {
      box-shadow: -1px 0 5px -1px var(--color-background);
    }
  }
}


// Desktop
nav.navigation, html.nav-toggled nav.navigation {
  @include window-larger-than(800px) {
    grid-template-areas:
      "logo primary   help      tools    "
      "logo secondary secondary secondary"
    ;
    grid-template-columns: min-content min-content minmax(0, 1fr) min-content;
    grid-template-rows: 1.75em 2em;

    padding: 0 1em 0.5em;
    box-sizing: border-box;
    height: unset;

    background: var(--color-background);
    overflow-y: hidden; // overrides mobile hack allowing the menu scrolling

    .nav-logo {
      a.nav-logo-link { margin: 0.25rem 0.5rem 0 0; }
    }

    .nav-offset-left, .nav-offset-bottom, .nav-controls { display: none; }

    .nav-primary {
      display: flex;
      flex-flow: row;

      background: unset;
      font-size: 1.05em;
      padding: 0 0.25em;

      li {
        a {
          display: flex;
          align-items: center;
          height: 100%;

          border-bottom: 0;
          padding: 0 0.75em;
          i { display: none; }
        }

        &.forum-updated::after {
          top: 0.2em;
        }
      }
    }

    .nav-secondary {
      display: flex;
      flex-flow: row;
      height: unset;

      padding: 0 0.25em;
      font-size: 1.05em;
      border-radius: 6px;

      // Silly fix for too many links
      overflow: hidden;

      li {
        a {
          display: flex;
          align-items: center;
          height: 100%;

          border-bottom: 0;
          padding: 0 0.75em;
          white-space: nowrap;
        }

        &.divider {
          display: flex;
          align-items: center;
          height: 100%;

          &::after { content: "|"; }
        }

        form {
          display: flex;
          align-items: center;

          input[type="text"] { min-width: 10em; }
        }
      }
    }

    .nav-tools, .nav-help {
      display: flex;

      padding: 0;
      background: unset;
      border: none;
      gap: 0;

      li {
        a {
          display: flex;
          align-items: center;
          height: 100%;
          gap: 0.25em;

          background: unset;
          font-size: 1.05em;
          padding: 0 0.75em;
          text-align: unset;
          white-space: nowrap;
          border-radius: 0;
        }
      }
    }

    .nav-tools {

      // Otherwise help gets layered above it
      // When the viewport is narrow (but not mobile)
      z-index: 1;
      background: var(--color-background);

      li {
        a {
          i { color: themed("color-link"); }
          &:hover i { color: themed("color-link-hover"); }
        }

        &.nav-tools-themes, &.nav-tools-settings {
          a span { display: none; }
        }
      }

      #nav-themes, #nav-settings { display: none; }
      @include window-larger-than(875px) {
        #nav-themes, #nav-settings { display: flex; }
      }
      
      #nav-account span { display: none; }
      @include window-larger-than(930px) {
        #nav-account span { display: unset; }
      }
    }
    .nav-help {

      // At small resolutions, overflow can
      // cause scrollbars to appear
      overflow: hidden;

      li a img { display: none; }

      li.current a {
        background-color: themed("color-foreground");
      }

      #nav-discord, #nav-subscribestar { display: none; }
      @include window-larger-than(1150px) {
        #nav-discord, #nav-subscribestar { display: flex; }
      }
    }

    .nav-primary, .nav-tools, .nav-help { box-shadow: unset; }
  }
}

// Tweak for the secondary menu on desktop
body.c-static.a-home {
  @include window-larger-than(800px) {
    nav.navigation {
      grid-template-columns: repeat(4, min-content);
      justify-content: center;

      #nav-subscribestar, #nav-discord, #nav-themes, #nav-settings {
        display: none;
      }
    }
    nav.navigation, menu.nav-logo, menu.nav-secondary {
      background: unset;
    }
    menu.nav-tools {
      background: var(--bg-color);
    }
  }

  @include window-smaller-than(800px) {
    // Only show the primary navbar on mobile
    // since the secondary is empty anyways
    nav.navigation {
      grid-template-areas:
        "logo    logo    controls" 
        "offleft primary primary " 
        "offleft tools   tools   " 
        "offleft help    help    " 
        "offleft offbott offbott ";

      .nav-secondary { display: none; }
    }
  }
}

